<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:textColor="@color/Title"
            android:textSize="32sp"
            android:paddingVertical="10dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout">

        <LinearLayout
            android:id="@+id/scrollViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_entry"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_entry"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <EditText
                android:id="@+id/pinCodeInput"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_code_combined"
                android:inputType="number"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <Spinner
                android:id="@+id/securityQuestionSpinner"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:entries="@array/questions_array"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <EditText
                android:id="@+id/securityAnswerInput"
                android:layout_marginTop="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_to_security_question"
                android:inputType="text"
                android:padding="12dp"
                android:background="@drawable/edittext_bg_whitebg" />

            <TextView
                android:id="@+id/btnFindBike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:paddingStart="10dp"
                android:padding="20dp"
                android:paddingEnd="0dp"
                android:text="@string/find_your_bike"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/apptheme"
                android:textSize="18sp" />

            <!-- Liste pour afficher les modules BLE trouvés -->
        <LinearLayout
            android:id="@+id/layoutRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <ListView
                android:id="@+id/listViewBleDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true" />

            <EditText
                android:id="@+id/editTextModuleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connect"
                android:inputType="text"
                android:maxLength="12" />
        </LinearLayout>


    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/confirmaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/apptheme"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        <TextView
            android:id="@+id/mobileapp_reglementation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reglementation"
            android:textColor="@color/heavy_gray"
            android:textSize="11sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
