<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/bike_logo"
        android:src="@drawable/ic_logo_wobg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- CardView for the form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/formCard"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Title -->
            <TextView

                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingBottom="8dp"
                android:text="@string/title_activity_pswd"
                android:textColor="@color/Title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/rubik_variablefont_wght"
                tools:ignore="RtlHardcoded" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:visibility="visible"
                android:paddingTop="10dp"
                android:paddingBottom="16dp"
                android:text="@string/activity_pswd_ressource_text"
                android:textColor="#4A5568"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textSize="14sp" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/editTextEmailRecovery"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="visible"
                android:hint="@string/email_entry"
                android:textSize="16sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:background="@drawable/edittext_bg_whitebg"
                android:inputType="textEmailAddress"
                android:layout_marginTop="0dp"/>

            <!-- Request Reset Link Button -->
            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/buttonSendRecovery"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/apptheme"
                android:padding="12dp"
                android:textStyle="bold"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:text="@string/Send_secret_question"
                android:textColor="@android:color/white"/>

            <!-- Back to Login Link -->
            <TextView
                android:id="@+id/backToLoginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:fontFamily="@font/rubik_variablefont_wght"
                android:textColor="@color/apptheme"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <!-- Language Selector -->
    <TextView
        android:id="@+id/languageSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/rubik_variablefont_wght"
        android:gravity="center"
        android:text="@string/english_language"
        android:textColor="#4A5568"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formCard" />

</androidx.constraintlayout.widget.ConstraintLayout>
